--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,6 +32,9 @@ jobs:
         repo: ${{ github.event.inputs.repo }}
         owner: ${{ github.event.inputs.owner }}
         environment: ${{ github.event.inputs.environment }}
+    - name: Python Script
+    - run: |
+         python3 ./python.py
 
     
 
