--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,7 +32,7 @@ jobs:
         owner: ${{ github.event.inputs.owner }}
         environment: ${{ github.event.inputs.environment }}
     - name: Python Script
-    - run: python3 ./python.py
+      run: python3 ./python.py
 
     
 
